--- a/package.json
+++ b/package.json
@@ -2,15 +2,17 @@
   "name": "brazil-travel-blog",
   "version": "0.1.0",
   "private": true,
-"scripts": {
-  "start": "react-scripts start",
-  "prebuild": "node scripts/generate-sitemap.js",
-  "build": "react-scripts build",
-  "test": "react-scripts test",
-  "eject": "react-scripts eject"  },
+  "scripts": {
+    "start": "react-scripts start",
+    "prebuild": "node scripts/generate-sitemap.js",
+    "build": "react-scripts build",
+    "test": "react-scripts test",
+    "eject": "react-scripts eject"
+  },
   "dependencies": {
     "framer-motion": "^12.23.22",
     "lucide-react": "^0.542.0",
+    "nodemailer": "^7.0.6",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.17.0",
